# meal-list

./: .gitignore  Cross.toml  README.md  backup_data.py  eslint.config.js  index.html  package.json
.github/workflows/: release.yml
api/: Cargo.toml  Dockerfile  build-docker.sh  pyproject.toml
api/app/: app.py  common.py  config.py  entity.py  model.py
api/app/api/: __init__.py  file.py  meal.py
api/app/repo/: file.py  meal.py
api/app/service/: file.py  meal.py
api/app/tests/: test_db.py
api/src/: config.rs  entity.rs  lib.rs  main.rs  model.rs  schema.rs  util.rs
api/src/api/: common.rs  file.rs  meal.rs  middleware.rs  mod.rs
api/src/dao/: file.rs  meal.rs  mod.rs
api/src/service/: file.rs  meal.rs  mod.rs
docker/: Dockerfile.aarch64-unknown-linux-musl
src/: App.css  App.tsx  index.css  index.tsx
src/api/: client.ts  file.ts  index.ts  meal.ts  mock.ts  settings.ts  tag.ts
src/components/: AddButton.tsx  ImageUploader.tsx  ImageViewer.tsx  MealCard.tsx  MealForm.tsx  PageHeader.tsx  TagEditor.tsx  TagFilter.tsx  TagSelector.tsx
src/pages/: Create.tsx  Edit.tsx  Home.tsx  List.tsx  Settings.tsx
src/services/: api.ts
src/utils/: format.ts  local.ts  settings.ts
