[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "corepy",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.sources]
corepy = { path = "../../corepy" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
